--- a/index.html
+++ b/index.html
@@ -10,19 +10,54 @@
 </head>
 
 <body>
+
+<!-- 1 e 2 -->
   <h1 id="tName">Kayky</h1>
   <input type="text" value="" class="inpText">
   <input type="submit" value="Enviar" class="btnEnviar">
 
 
 
-  <h1 id="tName">Velocimetro</h1>
+
+
+
+<!-- 3 -->
+  <h1 >Velocimetro</h1>
   <input type="number" value="" class="inpVelo">
   <input type="submit" value="Enviar" class="btnEnviar">
   <p id="result"></p>
 
 
+<!-- 4 -->
+<div class="divEsporte">
+<h2 class="esporte">Basquete</h2>
+<h2 class="esporte">Volei</h2>
+<h2 class="esporte">Tenis de mesa</h2>
+</div>
 
+<!-- 5 -->
+<div class="divSoma" style="margin: 20px;">
+  <h1>Somando 2 numeros</h1>
+  <input type="number" class="inpSoma">
+  <input type="number" class="inpSoma">
+  <input type="submit" value="Calcular" id="btnCalc">
+  <p id="txtSoma"></p>
+</div>
+
+<!-- 6 -->
+  <h1 >Adicionando valor no vetor</h1>
+  <input type="text" class="inp">
+  <input type="submit" value="Enviar" class="btn">
+  <div id="caixa"></div>
+
+<!-- 7 -->
+<p class="pQuestao7">Harry Potter</p>
+<p class="pQuestao7">Batman</p>
+<p class="pQuestao7">Yoda</p>
+<p class="pQuestao7">Luffy</p>
+
+  
+  
   <script src="/index.js" defer></script>
 </body>
 
