--- a/index.html
+++ b/index.html
@@ -11,16 +11,19 @@
 
 <body>
 
-<!-- 1 e 2 -->
+
+  <div class="tudo">
+  <!-- 1 e 2 -->
   <h1 id="tName">Kayky</h1>
+
   <input type="text" value="" class="inpText">
   <input type="submit" value="Enviar" class="btnEnviar">
+  
 
 
-
-
-
-
+  
+  
+  
 <!-- 3 -->
   <h1 >Velocimetro</h1>
   <input type="number" value="" class="inpVelo">
@@ -47,7 +50,7 @@
 <!-- 6 -->
   <h1 >Adicionando valor no vetor</h1>
   <input type="text" class="inp">
-  <input type="submit" value="Enviar" class="btn">
+  <input type="submit" value="Adicionar" class="btn">
   <div id="caixa"></div>
 
 <!-- 7 -->
@@ -56,9 +59,35 @@
 <p class="pQuestao7">Yoda</p>
 <p class="pQuestao7">Luffy</p>
 
+<!-- 8 -->
+<h1 style="margin-top: 40px;">Caixa</h1>
+<div class="box" onmouse>bloco</div>
   
+
+<!-- 9/10 -->
+
+<h1 style="margin-top: 40px;">Digite seu salário</h1>
+<input class="inputSalario" type="number" >
+<p class = 'rSalario'></p>
+<input class="btnSalario" type="button" value="Enviar">
+
+<!-- 11 -->
+
+<h1>Escolha a pessoa</h1>
+<div class="conteiner">
+  <p>Nome: <span class="snome">Joao</span></p>
+  <p>Time: <span class="stime">Palmeiras</span></p>
+  <button class="btnNome" type="button" value=""><span class="spanmudar">Ir para Maria</span></button>
+</div>
+<!-- <input class="btnNome"><p>ir para <span class="btnSpanNome">Maria</span></p></input>
+    </div> -->
+    
+</div>
+   
+
   
-  <script src="/index.js" defer></script>
+    <script src="/index.js" defer></script>
 </body>
+
 
 </html>
